--- a/index.html
+++ b/index.html
@@ -16,13 +16,10 @@
 
 	
 </head>
-<pre>
-<input type="file" id="input">
-</pre>
 <body style="width: 100%; height: 100%">
 <div id="map" style="width: 100%; height: 100%"></div>
 <script src="https://unpkg.com/leaflet-swoopy"></script>
-<script src="http://code.jquery.com/jquery-3.3.1.slim.js" integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA=" crossorigin="anonymous"></script>
+<script src="http://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
 <script src="./jquery.csv.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
 <script>
@@ -58,24 +55,36 @@
 				minZoom: 0,
 				maxZoom: 20,
 				factor: 0.75,
-				weight: 1,
-				arrowFilled: true,
-				iconSize: [100, 20],
-				iconAnchor: [60, 5]
+				weight: 1.5,
+				arrowFilled: false,
+				iconSize: [50, 20],
+				iconAnchor: [50, 5]
 			}).addTo(map);
 			new L.circle([line[0], line[1]], {
 				color: "red",
 				fillOpacity: 1,
-				radius: 10
+				radius: 15
 			}).addTo(map);
 			new L.circle([line[2], line[3]], {
 				color: "red",
 				fillOpacity: 1,
-				radius: 10
+				radius: 15
 			}).addTo(map);
 		}
 		return;
 	}
+    
+    jQuery(document).ready(function() {
+        jQuery.get('coord.csv', function(coord) {
+            console.log(coord)
+            coord = $.csv.toArrays(coord);
+            console.log(coord)
+            draw(coord);
+        });
+    });
+        
+
+    /*
 	var input = document.getElementById("input");
 	input.addEventListener("change", function () {
 		if (this.files && this.files[0]) {
@@ -83,13 +92,15 @@
 			var reader = new FileReader();
 			reader.addEventListener('load', function (e) {
 				var coord = e.target.result;
+                console.log(coord)
 				coord = $.csv.toArrays(coord);
+                console.log(coord)
 				draw(coord);
 			});
 		reader.readAsText(myFile);
 		}   
 	});
-
+*/
 	
 
 </script>
