--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body style="width: 100%; height: 100%">
 <div id="map" style="width: 100%; height: 100%"></div>
 <script src="https://unpkg.com/leaflet-swoopy"></script>
-<script src="http://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
-<script src="./jquery.csv.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
+<script src="jquery.csv.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
 <script>
 	function draw(coord){
