--- a/visualize_cands.html
+++ b/visualize_cands.html
@@ -62,7 +62,7 @@
 		return;
 	}
 		
-    window.location.reload(true); 
+    window.location.reload(false); 
 /*
 	var input = document.getElementById("input");
 	input.addEventListener("change", function () {
