--- a/try.html
+++ b/try.html
@@ -7,28 +7,26 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
+    <link rel="stylesheet" href="http://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
     integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
     crossorigin=""/>
      <!-- Make sure you put this AFTER Leaflet's CSS -->
-   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+   <script src="http://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
    integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
    crossorigin=""></script>
-  <script src="./leaflet.polylineDecorator.js"></script>
-  <script src="./L.polylineDecorator.js"></script>
-
+  <script src="leaflet.polylineDecorator.js"></script>
+  <script src="L.polylineDecorator.js"></script>
 
 	
 </head>
 <input type="file" id="files" name="files[]" multiple />
 <output id="list"></output>
-</pre>
 <body style="width: 100%; height: 100%">
 <div id="map" style="width: 100%; height: 100%"></div>
-<script src="https://unpkg.com/leaflet-swoopy"></script>
-<script src="http://code.jquery.com/jquery-3.3.1.slim.js" integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA=" crossorigin="anonymous"></script>
-<script src="./jquery.csv.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
+<script src="http://unpkg.com/leaflet-swoopy"></script>
+<script src="http://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
+<script src="jquery.csv.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
 <script>
 	function draw(coord){
 		const map = L.map("map", {
@@ -68,13 +66,14 @@
     // files is a FileList of File objects. List some properties.
     var output = [];
     for (var i = 0, f; f = files[i]; i++) {
-            var reader = new FileReader();
-			reader.addEventListener('load', function (e) {
-				var coord = e.target.result;
-				coord = $.csv.toArrays(coord);
-				draw(coord);
-			});
-            reader.readAsText(files[i]);
+    jQuery(document).ready(function() {
+        jQuery.get(files[i], function(coord) {
+            console.log(coord)
+            coord = $.csv.toArrays(coord);
+            console.log(coord)
+            draw(coord);
+        });
+    });
     }
     document.getElementById('list').innerHTML = '<ul>' + output.join('') + '</ul>';
   }
