--- a/try.html
+++ b/try.html
@@ -7,15 +7,15 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-    <link rel="stylesheet" href="http://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
     integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
     crossorigin=""/>
      <!-- Make sure you put this AFTER Leaflet's CSS -->
-   <script src="http://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
    integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
    crossorigin=""></script>
-  <script src="leaflet.polylineDecorator.js"></script>
-  <script src="L.polylineDecorator.js"></script>
+  <script src="./leaflet.polylineDecorator.js"></script>
+  <script src="./L.polylineDecorator.js"></script>
 
 	
 </head>
@@ -23,10 +23,11 @@
 <output id="list"></output>
 <body style="width: 100%; height: 100%">
 <div id="map" style="width: 100%; height: 100%"></div>
-<script src="http://unpkg.com/leaflet-swoopy"></script>
-<script src="http://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/leaflet-swoopy"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
 <script src="jquery.csv.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
+
 <script>
 	function draw(coord){
 		const map = L.map("map", {
