--- a/visualize_cands.html
+++ b/visualize_cands.html
@@ -15,9 +15,6 @@
    integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
    crossorigin=""></script>
 
-
-
-	
 </head>
 <pre>
 <input type="file" id="input">
@@ -26,7 +23,7 @@
 <div id="map" style="width: 100%; height: 100%"></div>
 <script src="https://unpkg.com/leaflet-swoopy"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.js" integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA=" crossorigin="anonymous"></script>
-<script src="./jquery.csv.js"></script>
+<script src="jquery.csv.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js"></script>
 <script>
 	function draw(coord){
