--- a/cands_with_template.html
+++ b/cands_with_template.html
@@ -55,8 +55,11 @@
 	
 		for (var i = 1; i < 55; i++) {
 			var point_coord = coord[i];	
-			new L.marker([coord[1][1],coord[1][0]]).addTo(map);
-		
+			new L.circle([point_coord[1], point_coord[0]], {
+					color: "blue",
+					fillOpacity: 1,
+					radius: 30
+				}).addTo(map);
 		}
 		return;
 	}
